Созданны файлы на основе данных приведенных в задании. Реализованно чтение и парсинг файлов

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,3 +12,6 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["gendiff"]
+
+[project.scripts]
+gendiff = "gendiff.scripts.gendiff:main"
