--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,5 +13,12 @@ build-backend = "hatchling.build"
 [tool.hatch.build.targets.wheel]
 packages = ["gendiff"]
 
+[dependency-groups]
+dev = [
+    "pytest>=8.3.5",
+    "pytest-cov>=6.0.0",
+    "ruff>=0.11.0",
+]
+
 [project.scripts]
 gendiff = "gendiff.scripts.gendiff:main"
