--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,32 @@
-[project]
+[tool.poetry]
 name = "hexlet-code"
 version = "0.1.0"
-description = "Add your description here"
+description = "Second project on Hexlet"
+authors = ["GrigoriyKruchinin <gkruchinin75@gmail.com>"]
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = [
-    "pyyaml>=6.0.2",
-]
+packages = [{include = "gendiff"}]
+
+
+[tool.poetry.dependencies]
+python = ">=3.10,<4.0"
+coverage = "^7.2.7"
+pyyaml = "^6.0"
+
+
+[tool.poetry.group.dev.dependencies]
+flake8 = "^6.0.0"
+pytest = "^7.4.0"
+
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
 
-[tool.hatch.build.targets.wheel]
-packages = ["gendiff"]
 
-[dependency-groups]
-dev = [
-    "pytest>=8.3.5",
-    "pytest-cov>=6.0.0",
-    "ruff>=0.11.0",
-]
+[tool.poetry.scripts]
+gendiff = 'gendiff.scripts.gendiff:main'
 
-[project.scripts]
-gendiff = "gendiff.scripts.gendiff:main"
+
+[tool.coverage.run]
+omit = ["*/__init__.py"]
+
